Draft commit #3461